Update index.html Favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-GB" class=" js"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Fernbank Medical Centre - Medical Doctors in Springburn Glasgow</title>
+	<link rel="icon" type="image/x-icon" href="./Fernbank Medical Centre - Medical Doctors in Springburn Glasgow_files/genpra-favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-snippet:-1,max-image-preview:large,max-video-preview:-1">
 <meta name="description" content="We provide comprehensive NHS primary care services to help you manage your health and well-being. Our aim is to provide a high quality…">
